fix blog wrap

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -16,7 +16,7 @@
 .blogcolumn div {
 	position: relative;
 	float: left;
-	width: 45%;
+	width: 40%;
 	height: auto;
 	margin: 20px;
   padding: 0;
